--- a/src/components/ColorBox/ColorBox.css
+++ b/src/components/ColorBox/ColorBox.css
@@ -2,7 +2,58 @@
     width: 20%;
     height: 25%;
     margin: 0 auto;
+    margin-bottom: -3.5px;
     display: inline-block;
     position: relative;
     cursor: pointer;
+    text-transform: uppercase;
+}
+
+.copy-button {
+    width: 100px;
+    height: 30px;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: -15px;
+    text-align: center;
+    outline: none;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.3);
+    font-size: 1rem;
+    line-height: 30px;
+    color: #fff;
+    cursor: pointer;
+    opacity: 0;
+}
+
+.ColorBox:hover .copy-button {
+    opacity: 1;
+    transition: 0.5s;
+}
+
+.box-content {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    color: #000;
+    letter-spacing: 1px;
+    font-size: 12px;
+}
+
+.see-more {
+    background-color: rgba(255, 255, 255, 0.3);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    border: none;
+    color: #fff;
+    width: 60px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
 }
