--- a/src/components/ColorBox/ColorBox.css
+++ b/src/components/ColorBox/ColorBox.css
@@ -58,3 +58,58 @@
     text-align: center;
     line-height: 30px;
 }
+
+.copy-overlay {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 0;
+    transform: scale(0.1);
+    transition: transform 0.6s ease-in-out;
+}
+
+.copy-overlay.show {
+    position: absolute;
+    opacity: 1;
+    z-index: 10;
+    transform: scale(50);
+}
+
+.copy-msg {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 4rem;
+    color: #fff;
+    opacity: 0;
+    transform: scale(0.1);
+}
+
+.copy-msg.show {
+    opacity: 1;
+    transform: scale(1);
+    z-index: 20;
+    transition: all 0.4s ease-in-out;
+    transition-delay: 0.3s;
+}
+
+.copy-msg h1 {
+    width: 100%;
+    font-weight: 400;
+    text-shadow: 1px #000;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    margin-bottom: 0;
+    padding: 1rem;
+}
+
+.copy-msg p {
+    font-size: 2rem;
+    font-weight: 200;
+}
