--- a/src/components/ColorBox/ColorBox.css
+++ b/src/components/ColorBox/ColorBox.css
@@ -9,7 +9,16 @@
     text-transform: uppercase;
 }
 
-.copy-button {
+.SingleColorPalette .ColorBox {
+    height: 50%;
+}
+
+.ColorBox.go-back {
+    background-color: #000;
+}
+
+.copy-button,
+.back-button {
     width: 100px;
     height: 30px;
     display: inline-block;
@@ -23,9 +32,14 @@
     border: none;
     background-color: rgba(255, 255, 255, 0.3);
     font-size: 1rem;
+    text-transform: uppercase;
+    text-decoration: none;
     line-height: 30px;
     color: #fff;
     cursor: pointer;
+}
+
+.copy-button {
     opacity: 0;
 }
 
