--- a/src/components/ColorBox/ColorBox.css
+++ b/src/components/ColorBox/ColorBox.css
@@ -60,6 +60,14 @@
     font-size: 12px;
 }
 
+.ColorBox .light-text {
+    color: #fff;
+}
+
+.ColorBox .dark-text {
+    color: rgba(0, 0, 0, 0.5);
+}
+
 .see-more {
     background-color: rgba(255, 255, 255, 0.3);
     position: absolute;
