--- a/src/components/Palette/Palette.css
+++ b/src/components/Palette/Palette.css
@@ -1,10 +1,10 @@
-.Palette {
+/* .Palette {
     height: 100vh;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-}
+} */
 
-.Palette-colors {
+/* .Palette-colors {
     height: 90%;
-}
+} */
